syntax = "proto3";

package im_ws;

option go_package = "./";

// 定义服务
service IMWebsocket {
  rpc ServerPushMsgToUser (ServerPushMsgToUserRequest) returns (ServerPushMsgToUserResponse);
}

message MessageContent{
  int32 msgType = 2;
  string conversationID = 3;
  string sender = 4;
  string message = 5;
}
// 定义请求消息
message ServerPushMsgToUserRequest {
  string userID = 1;
  MessageContent messageContent = 2;
}

// 定义响应消息
message ServerPushMsgToUserResponse {
  int32 status_code = 1;
  string message = 2;
}